[package]
name = "migrator"
version = "0.1.0"
edition = "2024"

[lib]
name = "migrator"
path = "src/lib.rs"

[[bin]]
name = "migrator"
path = "src/main.rs"

[dependencies]
chrono = "0.4.40"
clap = { version = "4.5.31", features = ["derive"] }
rusqlite = { version = "0.33.0", features = ["bundled"] }
